spade-tests/src/snapshots/spade_tests__ast_lowering__inverting_non_port_type.snap
---
source: spade-tests/src/ast_lowering.rs
---
extern entity x(t: inv int<8>) -> int<8>;

error: A non-port type can not be inverted
  ┌─ testinput:1:20
  │
1 │ extern entity x(t: inv int<8>) -> int<8>;
  │                    ^^^^^^^^^^
  │                    │   │
  │                    │   This is not a port
  │                    Inverting non-port
